[package]
name = "binius-das-poc"
version = "0.1.0"
edition = "2024"


[dependencies]
binius-prover = { path = "../binius/binius64/prover/prover" }
binius-verifier = { path = "../binius/binius64/verifier/verifier" }
binius-math = {path = "../binius/binius64/verifier/math"}
binius-field = {path = "../binius/binius64/verifier/field"}
binius-transcript = {path = "../binius/binius64/verifier/transcript"}
rand = { version = "0.9.1", default-features = false, features = [
    "std",
    "std_rng",
] }
itertools = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = {version = "1.8", optional = true}
clap = { version = "4.0", features = ["derive"] }
uninit = "0.6.2"

[dev-dependencies]
divan = { version = "0.1"}
rand = { version = "0.9.1", default-features = false, features = [
    "std",
    "std_rng",
    "thread_rng",
] }

[[bench]]
name = "commitment"
harness = false

[features]
default = []
parallel = ["rayon"]
