[package]
name = "proof_of_proof_guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "^3.0.4", default-features = false, features = ['std'] }
risc0-zkvm-platform = { version = "2.1.1", features = ["sys-getenv"] }
FRIVeil = {path="../../../"}
proof-core = {path="../../core"}
